# lib-version

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/libversion/: __init__.py
